[project]
name = "luts"
version = "1.0.2"
description = "Multidimensional labeled arrays and datasets in Python, similar to xarray."
authors = [{name = "François Steinmetz", email = "fs@hygeos.com"}]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.19.2"
scipy = ">=1.5.2"
xarray = ">=0.16.1"
netcdf4 = ">=1.5.4"
pyhdf = { version = ">=0.10.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
